--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Assists in strategic financial planning and resource allocation.
 Supports the head of finance in investment management.</p>
       </div>
       <div class="team-member">
-        <img src="/images/basit.jpg" alt="CTO Picture">
+        <img src="images/basit.jpg" alt="CTO Picture">
         <h3>Mr.Kiggundu Abdulbasit</h3>
         <p>General Secretary</p>
         <p>Maintains accurate records of meetings and decisions.
