improved on responsiveness, and styling and some new members and added their profile pics

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h3>Historical Background</h3>
     <p>
       Youth Connect Group was established in early 2021 with a mission to empower youth through financial literacy, saving programs, and investment management. Founded by Wawumba Esuneri, the group initially operated under a different name but rebranded to reflect a modern and relatable identity. 
-      The name "Youth Connect Group," proposed by Kawala Josephyne Fridah, symbolizes the group's mission to connect young people with opportunities for personal and community development.
+      The name "Youth Connect Group", proposed by Kawala Josephyne Fridah, symbolizes the group's mission to connect young people with opportunities for personal and community development.
     </p>
 
     <h3>Mission and Vision</h3>
@@ -69,9 +69,28 @@
 
     <!-- Founder 2 -->
     <div class="founder">
-      <img src="images/kataba.jpg" alt="Kataba Awali Picture">
+      <img src="images/awali.jpg" alt="Kataba Awali Picture">
       <h3>Kataba Awali</h3>
       <p>Kataba Awali serves as the First Acting Chairperson. His strategic leadership has strengthened the group’s operations and its community impact.</p>
+    </div>
+    <div class="founder">
+      <img src="images/christine.jpg" alt="KChristine Picture">
+      <h3>Kikubagizo Mary Christine
+</h3>
+      <p>Head of the Finance Department, has been a cornerstone of the group's financial management. Her expertise in finance has ensured the group's resources are effectively managed, promoting transparency and accountability. Her efforts in financial education have empowered members to make informed investment decisions.</p>
+    </div>
+    <div class="founder">
+      <img src="images/bogere.jpg" alt="Mr.James Picture">
+      <h3>Bogere James</h3>
+      <p>As the co-founder and Head of sales and marketing Team, Bogere James has played a key role in building the group's brand and outreach. His innovative marketing strategies have significantly increased the group's visibility, attracting new members and partners.
+         His work has helped establish Youth Con-nect Group as a reputable and growing group in the community.</p>
+    </div>
+    <div class="founder">
+      <img src="images/kawala.jpg" alt="Mrs.Fridah Picture">
+      <h3>Kawala Josephyne Fridah</h3>
+      <p>A founding member who later became the operational Director. She was instrumental in rebranding the group, proposing the name Youth Con-nect Group.
+         The name symbolized the group’s mission to connect young people with opportunities for personal and community development.
+         The name was officially adopted, marking a new chapter for the group.</p>
     </div>
 
     <!-- Add more founders here -->
@@ -81,7 +100,7 @@
     <h2>Our Team</h2>
     <div class="team-container">
       <div class="team-member">
-        <img src="/images/miriam.jpg" alt="CEO Picture">
+        <img src="images/miriam.jpg" alt="CEO Picture">
         <h3>Mrs.Nansubuga Miriam</h3>
         <p>Chief Executive Officer</p>
         <p>Leads the group in all strategic and operational matters.
@@ -91,7 +110,7 @@ Focuses on improving member engagement.
 Acts as a liaison between the leadership and members.</p>
       </div>
       <div class="team-member">
-        <img src="/images/kawala.jpg" alt="CFO Picture">
+        <img src="images/kawala.jpg" alt="CFO Picture">
         <h3>Mrs.Kawala Josephyne Fridah</h3>
         <p>Chief Financial Officer</p>
         <p>Manages financial transactions and reporting.
@@ -99,7 +118,7 @@ Assists in strategic financial planning and resource allocation.
 Supports the head of finance in investment management.</p>
       </div>
       <div class="team-member">
-        <img src="/images/basit.jpg" alt="CTO Picture">
+        <img src="images/basit.jpg" alt="CTO Picture">
         <h3>Mr.Kiggundu Abdulbasit</h3>
         <p>General Secretary</p>
         <p>Maintains accurate records of meetings and decisions.
@@ -107,7 +126,7 @@ Oversees the documentation of programs and achievements.
 Coordinates communication within and outside the group.</p2>
       </div>
       <div class="team-member">
-        <img src="/images/allan.jpg" alt="CTO Pi">
+        <img src="images/allan.jpg" alt="CTO Pi">
         <h3>Mr.Ngobi Allan</h3>
         <p>Mobilizer</p>
         <p>Continues to manage recruitment and member engagement.
@@ -119,14 +138,13 @@ Organizes networking and capacity-building events.
   <h2>Contact Us</h2>
   <p>We would love to hear from you. Reach out to us anytime!</p>
   <div class="contact-info">
-    <a href="tel:+256700123456" style="text-decoration: none; color: blue;">
-    <p class="contact-header">Call Us</p>
+   <!-- <a href="tel:+256700123456" style="text-decoration: none; color: blue;"> -->
+    <strong class="contact-header">Call Us</stong>
 <ul class="contact-list">
     <li><a href="tel:+256785767695">+256 785 767 695</a></li>
     <li><a href="tel:+256703883767">+256 703 883 767</a></li>
     <li><a href="tel:+256705197926">+256 705 197 926</a></li>
 </ul>
-    </a>
     <p>
       <strong>Email Us:</strong> 
       <a href="mailto:youthconnectgroup2021@gmail.com">youthconnectgroup2021@gmail.com</a>
